--- a/apps/values.yaml
+++ b/apps/values.yaml
@@ -1,22 +1,1 @@
-{{- $top := . -}}
-{{- $files := .Files }}
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "4"
-  name: grafana
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    namespace: argocd
-    server: https://kubernetes.default.svc
-  project: {{ $landscape.name }}
-  source:
-    path: '.'
-    repoURL: https://github.com/Sid129/grafana.git
-    targetRevision: Head
-  syncPolicy: {}
+grafana: 5.2
