--- a/apps/templates/grafana.yaml
+++ b/apps/templates/grafana.yaml
@@ -14,7 +14,7 @@ spec:
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
-  project: {{ $landscape.name }}
+  project: default
   source:
     path: '.'
     repoURL: https://github.com/Sid129/grafana.git
